--- a/project1.html
+++ b/project1.html
@@ -7,7 +7,7 @@
   <body>
     <section id="home">
         <!-- This is the main heading -->
-        <header><b>Unit Conversions</b></header>
+        <header><b>Unit Conversion</b></header>
         <nav>
             <!-- Button for redirecting users to the temperature section -->
             <a href="#temperature"><button>Temperature</button></a>
